--- a/Weather_Database/Weather_Database.ipynb
+++ b/Weather_Database/Weather_Database.ipynb
@@ -1229,7 +1229,7 @@
    "outputs": [],
    "source": [
     "# Export and save DataFrame as a CSV file\n",
-    "output_data_file = \"Weather_Database/WeatherPy_Database.csv\"\n",
+    "output_data_file = \"WeatherPy_Database.csv\"\n",
     "# Export the City_data into a CSV.\n",
     "city_data_df.to_csv(output_data_file, index_label=\"City_ID\")"
    ]
